<resources>
    <string name="app_name">Remote</string>
    <string name="bluetooth_connect">Connect</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="connected_device">"Connected device: "</string>
    <string name="microphone">Microphone</string>
    <string name="control">Control</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="left">left</string>
    <string name="straight">straight</string>
    <string name="right">right</string>
    <string name="forward">forward</string>
    <string name="backward">backward</string>
    <string name="button_start_recording">Start Recording</string>
    <string name="button_stop_recording">Stop Recording</string>
    <string name="start_recording_message">Recording started</string>
    <string name="stop_recording_message">Recording stopped</string>
    <string name="title_activity_controller_horizontal">Controller</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="tilt">Tilt</string>
</resources>